--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,7 +1,7 @@
 #about {
-	margin: 2.5em 4em 10em 4em;
+	margin: 2.5em 2em 10em 2em;
 	font-weight: bold;
-	font-size: 0.8em;
+	// font-size: 0.8em;
 }
 
 @media screen and ($tablet){
